fix(popup): now positioned as expected (#12)
* fix(popup): fix position relative to toggler

* fix(arrow): border of more than `1px` was overflowing

* chore(story): add more templates

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,7 @@
   clip-path: polygon(0 0, 100% 0, 100% 100%);
   background-color: inherit;
   border: inherit;
-  box-sizing: content-box;
+  box-sizing: border-box;
   border-bottom: none;
   border-left: none;
 
